--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+body {
+    background-color: black;
+    color: white;
+    font-family: 'Staatliches', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2 {
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.landing-page{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    margin: 5%;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.box {
+    width: 300px;
+    height: 100px;
+    padding: 50px;
+    border: 1px solid red;
+    margin: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.box-2 {
+    flex: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media all and (min-width: 800px) {
+    /*
+    Desktop defaults in more rows, where mobile is all columns
+    */
+
+    .landing-page{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 50px;
+    }
 }
