--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@ h1, h2 {
 }
 
 .box {
-    width: 300px;
-    height: 100px;
+    /* width: 300px;
+    height: 100px; */
     padding: 50px;
     border: 1px solid red;
     margin: 10px;
