--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,10 @@ h1, h2 {
 }
 
 .box {
-    /* width: 300px;
-    height: 100px; */
+    /* height: 100px; */
     padding: 50px;
     border: 1px solid red;
-    margin: 10px;
+    margin: 10%;
 }
 
 @media all and (min-width: 800px) {
