--- a/src/routes/RegistrationPage/RegistrationPage.css
+++ b/src/routes/RegistrationPage/RegistrationPage.css
@@ -1,2 +1,22 @@
+input {
+    background-color: grey;
+    color: white;
+}
+
+form {
+    margin: auto;
+    width: 200px;
+    border: 1px solid red;
+    padding: 5px;
+}
+
+::placeholder {
+    color: black;
+    opacity: 1;
+}
+
 @media all and (min-width: 800px) {
+    form {
+        width: 50%;
+    }
 }
