--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,34 @@ input, select, textarea{
     color: #ff0000;
 }
 
+a:link    { color: grey  }
+a:visited { color: grey   }
+a:hover   { color: red }
+a:active  { color: red  }
+
+.myButton {
+	box-shadow: 3px 4px 0px 0px #ff0000;
+	background:linear-gradient(to bottom, #000000 5%, #8a8a8a 100%);
+	background-color:#000000;
+	border-radius:5px;
+	border:1px solid #dedede;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:15px;
+	padding:12px 44px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #7a7a7a;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #8a8a8a 5%, #000000 100%);
+	background-color:#8a8a8a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}  
+
 .box {
     padding: 50px;
     border: 1px solid red;
