--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,11 @@
+h1 {
+    font-size: 50px;
+}
+
 .Header__not-logged-in, .Header__logged-in {
-    text-align: center;
+   position: absolute;
+   top: 0;
+   right: 0;
+   margin-right: 10px;
+   margin-top: 10px;
 }
